--- a/admin.html
+++ b/admin.html
@@ -312,13 +312,25 @@
             <button onclick="filterOrders('cancelled')"
               class="px-3 py-1.5 rounded-lg bg-white/5 text-slate-400 hover:text-white text-xs font-medium border border-transparent">Cancelled</button>
           </div>
-          <button onclick="loadOrders()" class="p-2 rounded-lg bg-white/5 text-slate-400 hover:text-white transition">
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
-              </path>
-            </svg>
-          </button>
+          <div class="flex gap-2">
+            <button onclick="cleanupExpiredOrders()"
+              class="flex items-center gap-2 px-3 py-2 rounded-lg bg-rose-500/10 text-rose-400 hover:bg-rose-500/20 hover:text-rose-300 transition text-xs font-medium border border-rose-500/20"
+              title="Kembalikan stok pesanan expired">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+                </path>
+              </svg>
+              Release Expired
+            </button>
+            <button onclick="loadOrders()" class="p-2 rounded-lg bg-white/5 text-slate-400 hover:text-white transition">
+              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
+                </path>
+              </svg>
+            </button>
+          </div>
         </div>
 
         <div class="overflow-hidden rounded-2xl border border-white/10 bg-white/5 shadow-xl">
@@ -3323,6 +3335,41 @@
 
         return false;
       };
+    }
+  </script>
+  <script>
+    // 🧹 Cleanup Expired Orders Function
+    async function cleanupExpiredOrders() {
+      if (!confirm('Apakah Anda yakin ingin mengecek dan mengembalikan stok dari pesanan pending yang sudah expired (lebih dari 1 jam)?')) {
+        return;
+      }
+
+      const btn = document.querySelector('button[onclick="cleanupExpiredOrders()"]');
+      const originalContent = btn.innerHTML;
+      btn.disabled = true;
+      btn.innerHTML = '<span class="animate-spin mr-2">⏳</span> Proses...';
+
+      try {
+        const response = await fetch('https://payment.arufkuy.workers.dev/cleanup-expired', {
+          method: 'POST'
+        });
+
+        const result = await response.json();
+
+        if (response.ok && result.success) {
+          showToast(`Berhasil! ${result.processed} pesanan expired diproses & stok dikembalikan.`, 'success');
+          loadOrders(); // Refresh table
+        } else {
+          throw new Error(result.message || result.error || 'Gagal memproses cleanup.');
+        }
+
+      } catch (error) {
+        console.error('Cleanup failed:', error);
+        showToast(`Gagal: ${error.message}`, 'error');
+      } finally {
+        btn.disabled = false;
+        btn.innerHTML = originalContent;
+      }
     }
   </script>
 </body>
